src/objects/Office_Name__c.object
<CustomObject>
    <description>Name of the office</description>
    <fields>
        <fullName>Bank_Account_Checks__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account (Checks)</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>Branches (Bank Account (Checks))</relationshipLabel>
        <relationshipName>Branches3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Branch External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cash account tied to this branch.</description>
        <inlineHelpText>Please select the cash account you would like to associate with this branch.</inlineHelpText>
        <label>Cash Account</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>Branches (Cash Account)</relationshipLabel>
        <relationshipName>Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account (Operations)</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>Branches (Check Account)</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_System_Date__c</fullName>
        <label>Current System Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_advance_to_create_Collection_Rep__c</fullName>
        <label>Days in advance to create Collection Rep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inward_Check_Clearance_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inward Check Clearance Account</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>Branches (Inward Check Clearance Account)</relationshipLabel>
        <relationshipName>Branches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Branch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Schedule_tied_to_Meeting_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Loan Schedule tied to Meeting Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mark_Suspended_After_Days__c</fullName>
        <defaultValue>90</defaultValue>
        <label>Mark Suspended After Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Office Address</description>
        <label>Branch Location</label>
        <referenceTo>Branch_Location__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_Name_ID__c</fullName>
        <description>Office Name ID</description>
        <displayFormat>Off-{0000}</displayFormat>
        <inlineHelpText>Office Name ID</inlineHelpText>
        <label>Branch ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Office_Short_Name__c</fullName>
        <description>Office Short Name</description>
        <inlineHelpText>Office Short Name</inlineHelpText>
        <label>Branch Short Name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Office_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Office Type</description>
        <label>Branch Type</label>
        <referenceTo>Office_Type__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outward_Check_Clearance_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outward Check Clearance Account</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>Branches (Outward Check Clearance Account)</relationshipLabel>
        <relationshipName>Branches2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Office</description>
        <inlineHelpText>Parent Office</inlineHelpText>
        <label>Parent Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit_and_Loss_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profit and Loss Account</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>Branches (Profit and Loss Account)</relationshipLabel>
        <relationshipName>Profit_and_Loss_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Write_Off_Suggestion_Days__c</fullName>
        <label>Write Off Suggestion Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Branch</label>
    <nameField>
        <label>Branch</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>